# neonatal-rag-chatbot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
.cursor/: rules
.github/workflows/: ci.yml
data/: bm25_docs.pkl  bm25_index.pkl  output.json  progress.json  pubmed_checkpoint.json
data/qdrant/: meta.json
scripts/: ingest.py  inspect_db.py  monitor.py  run_agent.py
src/agents/: pubmed_agent.py  state.py
src/agents/tools/: ingest_tool.py  pmc_tool.py  pubmed_tool.py
src/config/: logging_config.py  settings.py
src/database/: crud.py  models.py
src/ingestion/: loader.py
src/rag/: chain.py  prompts.py
src/ui/: app.py
src/vectorstore/: store.py
tests/: test_crud.py  test_ingestion.py  test_settings.py  test_vectorstore.py
