[project]
name = "neonatal-rag-chatbot"
version = "0.1.0"
description = "A local-first Retrieval-Augmented Generation (RAG) chatbot for neonatal clinical decision support, combining Ollama LLMs with ChromaDB vector search and LangChain orchestration for privacy-preserving medical Q&A."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "chromadb>=1.5.5",
    "gradio>=6.10.0",
    "langchain>=1.2.13",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.23",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "langgraph>=1.1.3",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "xmltodict>=1.0.4",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
]
